# public

Docker/sample00/: Dockerfile
demo-app/: Dockerfile  docker-start
demo-app/.devcontainer/: devcontainer.json
demo-app/apache2-sites-available/: 80.conf
demo-app/root/: .bash_history  .mysql_history  .profile  .viminfo
demo-app/www/app/Http/Controllers/: AccountController.php
demo-app/www/app/Models/account/: account.php
demo-app/www/app/Models/error/: error.php
demo-app/www/app/Models/mail/: send-mail.php
demo-app/www/app/Models/mysql/: mysql.php
demo-app/www/resources/views/account/: signin.blade.php  signup.blade.php
demo-app/www/routes/: web.php
demo-app/www/sql/: setup.sql
demo-app_v1.2/: server-remove  server-setup  server-start  server-stop  www-cp
demo-app_v1.2/db/: Docker  Dockerfile  create-dockerfile
demo-app_v1.2/db/sql/: init.sql
demo-app_v1.2/web/: Dockerfile
demo-app_v1.2/web/config/: bashrc
demo-app_v1.2/web/exec/: CMakeLists.txt  aes256_gcm_decrypt.cc  aes256_gcm_encrypt.cc
demo-app_v1.2/web/exec/aes/: aes.cc  aes.h  aes_exception.cc  aes_exception.h
demo-app_v1.2/web/exec/base64/: base64.cc  base64.h
demo-app_v1.2/web/main/www/: .env  composer.json
demo-app_v1.2/web/main/www/app/Http/Controllers/: AccountController.php  InformationController.php  ResetPasswordController.php
demo-app_v1.2/web/main/www/resources/views/: information.blade.php
demo-app_v1.2/web/main/www/routes/: web.php
demo-app_v1.2/web/sites-available/: laravel-80.conf
php-xdebug/web/: Dockerfile
php-xdebug/web/xdebug/: xdebug.ini
(+16 files in other folders)
